frontend/test/should_fail/graphof_return_value_mismatch.grg
#using "graphof_model.gm"

rule r {
	n:N -e:E-> n;
	
	modify {
	---
		def var i:int;
		eval {
			yield i = graphof(n);
		}
	}
}
